[project]
name = "world-2-video"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.43.0",
    "diffusers>=0.38.0",
    "einops>=0.8.2",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "transformers>=5.12.1",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
